kubernetes/k8s/immich-backup/immich-machine-learning.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: immich-machine-learning
  name: immich-machine-learning
  namespace: immich-backup
spec:
  selector:
    matchLabels:
      app: immich-machine-learning
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 2
  replicas: 2
  template:
    metadata:
      labels:
        app: immich-machine-learning
    spec:
      containers:
        - name: immich-machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:v1.126.1
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: model-cache
              mountPath: /cache
            - name: immich-secrets
              mountPath: /secrets
      volumes:
        - name: immich-secrets
          projected:
            sources:
              - secret:
                  name: immich-secrets
        - name : model-cache
          emptyDir: {}
