kubernetes/k8s/immich-backup/immich-microservices.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: immich-microservices
  name: immich-microservices
  namespace: immich-backup
spec:
  selector:
    matchLabels:
      app: immich-microservices
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 2
  replicas: 2
  template:
    metadata:
      labels:
        app: immich-microservices
    spec:
      containers:
        - name: immich-microservices
          image: ghcr.io/immich-app/immich-server:v1.125.7
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: immich-photos
              mountPath: /usr/src/app/upload
            - name: immich-secrets
              mountPath: /secrets
      volumes:
        - name: immich-secrets
          projected:
            sources:
              - secret:
                  name: immich-secrets
        - name: immich-photos
          persistentVolumeClaim:
            claimName: immich-photos-backup-pvc
