kubernetes/k8s/immich-backup/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-redis
  namespace: immich-backup
spec:
  selector:
    matchLabels:
      app: immich-redis
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 2
  replicas: 2
  template:
    metadata:
      labels:
        app: immich-redis
    spec:
      containers:
        - name: immich-redis
          image: redis:6.2-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
              name: immich-redis
          readinessProbe:
            exec:
              command:
              - sh
              - -c
              - redis-cli ping || exit 1
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            exec:
              command:
              - sh
              - -c
              - redis-cli ping || exit 1
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: immich-redis
  name: immich-redis
  namespace: immich-backup
spec:
  type: ClusterIP
  ports:
    - port: 6379
      name: immich-redis
  selector:
    app: immich-redis
