kubernetes/k8s/immich-backup/immich-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: immich-server
  name: immich-server
  namespace: immich-backup
spec:
  selector:
    matchLabels:
      app: immich-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 2
  replicas: 2
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:v1.125.7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2283
              name: immich-server
          volumeMounts:
            - name: immich-photos
              mountPath: /usr/src/app/upload
            - name: immich-secrets
              mountPath: /secrets
          readinessProbe:
            httpGet:
              path: /api/server/ping
              port: 2283
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/server/ping
              port: 2283
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        - name: immich-secrets
          projected:
            sources:
              - secret:
                  name: immich-secrets
        - name: immich-photos
          persistentVolumeClaim:
            claimName: immich-photos-backup-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: immich-server
  name: immich-server
  namespace: immich-backup
spec:
  ports:
    - name: immich-server
      port: 2283
      targetPort: immich-server
  selector:
    app: immich-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-immich
  namespace: immich-backup
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - photos.akashisn.info
      secretName: immich-cert
  rules:
    - host: photos.akashisn.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  name: immich-server
